update API AUTH
