# app/Http/Controllers/Controller.php
@@ -9,23 +9,22 @@ use Illuminate\Routing\Controller as BaseController;
 
 /**
  * @OA\Info(
- *     description="This is a sample Petstore server.  You can find
-out more about Swagger at
-[http://swagger.io](http://swagger.io) or on
-[irc.freenode.net, #swagger](http://swagger.io/irc/).",
+ *     description="Base API",
  *     version="1.0.0",
- *     title="Swagger Petstore",
- *     termsOfService="http://swagger.io/terms/",
+ *     title="Swagger Base API",
  *     @OA\Contact(
- *         email="apiteam@swagger.io"
- *     ),
- *     @OA\License(
- *         name="Apache 2.0",
- *         url="http://www.apache.org/licenses/LICENSE-2.0.html"
+ *         email="admin@gmail.com"
  *     )
+ * ),
+ * @OA\SecurityScheme(
+ *     type="apiKey",
+ *     in="header",
+ *     securityScheme="api_key",
+ *     name="Authorization"
  * )
  */
 class Controller extends BaseController
 {
     use AuthorizesRequests, DispatchesJobs, ValidatesRequests;
+    //Bearer eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJpc3MiOiJodHRwOlwvXC9sb2NhbGhvc3RcL2FwaVwvYXV0aFwvbG9naW4iLCJpYXQiOjE2MDExMTc4ODYsImV4cCI6MTYwMTEyMTQ4NiwibmJmIjoxNjAxMTE3ODg2LCJqdGkiOiJTbGJuWEZLa1VEVEpycEo2Iiwic3ViIjoxLCJwcnYiOiI4N2UwYWYxZWY5ZmQxNTgxMmZkZWM5NzE1M2ExNGUwYjA0NzU0NmFhIn0.8H4PesESpUiQU3Q_SEuxs8jZ3ubO2IXDh93OgajZ5u4
 }
